Fix z-index styles.

--- a/kanmail/client/styles/columns.less
+++ b/kanmail/client/styles/columns.less
@@ -56,6 +56,7 @@ section#columns {
             position: relative;
             font-size: 20px;
             border-bottom: 1px solid #E7E7E7;
+            z-index: 2;
 
             i.loading {
                 font-size: 12px;
@@ -158,7 +159,7 @@ section#columns {
         // }
 
         &.open {
-            z-index: 9998;
+            z-index: 8;
         }
 
         &.archiving {
