--- a/kanmail/client/styles/sidebar.less
+++ b/kanmail/client/styles/sidebar.less
@@ -67,7 +67,7 @@ section#sidebar {
                 overflow-y: auto;
                 background: white;
                 padding: 5px;
-                z-index: 999;
+                z-index: 9;
                 color: black;
                 left: @sidebarWidth;
                 text-align: left;
@@ -205,7 +205,7 @@ section#sidebar {
             height: 100px;
             background: @lightGrey;
             border-top: 5px solid #D7D7D7;
-            z-index: 9999;
+            z-index: 9;
             display: flex;
             justify-content: space-between;
 
